--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 .background-color-red {
@@ -59,6 +60,14 @@
   margin-left: 5px;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
+.default {
+  cursor: default !important;
+}
+
 h1, h2, h3, h4, h5, a {
   font-family: 'Quicksand', sans-serif;
 }
@@ -87,6 +96,7 @@ button, button p {
 
 html, body {
   width: 100vw;
+  max-width: 100vw;
   height: 100vh;
   margin: 0;
   overflow-x: hidden;
@@ -99,10 +109,10 @@ html, body {
 
 canvas {
   position: fixed;
+  max-width: 100%
 }
 
 /* ----- BACKGROUND ANIMATION ------ */
-
 @-webkit-keyframes AnimationName {
   0% {
     background-position: 0% 50%
@@ -160,11 +170,16 @@ figure {
   top: 0;
   position: fixed;
   width: 100%;
-  height: 12vh;
+  max-width: 100vw;
+  height: auto;
   z-index: 100;
   background: url("../img/text-logo-kontinuum.png") center center no-repeat;
   background-size: 40vw;
   background-color: black;
+}
+
+.header #logo_2 {
+  display: none;
 }
 
 .header ul {
@@ -194,9 +209,9 @@ figure {
   float: left;
 }
 
-.header .logo img {
-  margin: 15px;
-  width: 8vh;
+.header #logo_1 {
+  width: 30%;
+  margin: 3vw;
 }
 
 /* menu */
@@ -279,20 +294,47 @@ figure {
   height: 0;
 }
 
+/* ------ left side of the screen ----- */
+.left-side-element {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30vh;
+  color: white;
+}
+
+.left-side-element h2 {
+  font-size: 10px;
+  text-align: center;
+  letter-spacing: 3px;
+  margin-top: 2px;
+}
+
+#CTA-about {
+  margin-top: 5px;
+  color: white;
+}
+
 /* ---------- page styling ---------- */
 #pages-wrapper {
-  width: 100%;
+  width: 100vw;
+  max-width: 100%;
   height: 100%;
   position: absolute;
   z-index: 10;
-  scroll-behavior: smooth;
 }
 
 .page {
   display: none;
   animation: fadeIn 0.4s;
   background-color: white;
-  width: 100vw;
+  width: 100%;
+  max-width: 100%;
   margin-bottom: 100vh;
 }
 
@@ -302,6 +344,7 @@ figure {
 
 #home-header {
   width: 100%;
+  max-width: 100%;
   height: 10vh;
   display: flex;
   align-items: center;
@@ -336,13 +379,14 @@ figure {
 
 #home-footer {
   width: 100%;
+  max-width: 100%;
   height: 10vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-#home-footer a {
+#home-footer p {
   color: white;
   text-decoration: none;
 }
@@ -361,6 +405,7 @@ figure {
 
 #grid-container {
   width: 100vw;
+  max-width: 100%;
   height: auto;
   display: grid;
   grid-template-columns: auto auto;
@@ -397,6 +442,7 @@ figure {
 
 .black-header-box {
   width: 100%;
+  max-width: 100%;
   height: 20%;
   background-color: black;
   top: 0;
@@ -426,6 +472,15 @@ figure {
   max-width: 100%;
   max-height: 100%;
   overflow: hidden;
+  border-style: solid;
+}
+
+.artist-image-border-purple {
+  border-color: var(--purple);
+}
+
+.artist-image-border-red {
+  border-color: var(--red);
 }
 
 .artist-hashtags {
@@ -490,7 +545,7 @@ figure {
 .displayBlock {
   /*  display: block !important; */
   margin: 10px;
-  max-height: 100%;
+  max-height: 50vh;
   transition: max-height 0.55s ease-in;
 }
 
@@ -539,26 +594,26 @@ figure {
   justify-content: center;
 }
 
-.ticket-button {
+.CTA-button {
   box-shadow: 2px 3px 0px 0px black;
   background: linear-gradient(to bottom, #189056 5%, #48c3a7 100%);
   border-radius: 17px;
   cursor: pointer;
-  padding: 5px;
+  padding: 8px;
   margin-bottom: 20px;
 }
 
-.ticket-button a {
+.CTA-button a {
   margin: 20px;
   text-decoration: none;
 }
 
-.ticket-button:hover {
+.CTA-button:hover {
   background: linear-gradient(to bottom, #48c3a7 5%, #189056 100%);
   background-color: #f24437;
 }
 
-.ticket-button:active {
+.CTA-button:active {
   position: relative;
   top: 1px;
 }
@@ -566,10 +621,11 @@ figure {
 /* ------ FOOTER ----- */
 .footer-nav {
   position: fixed;
-  z-index: 0;
+  z-index: 2;
   bottom: 0;
   display: none;
   width: 100%;
+  max-width: 100%;
   background-color: white;
   color: black;
   text-align: center;
@@ -584,19 +640,20 @@ figure {
   display: block;
 }
 
-.sponsor-header {
+.sponsor-footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 10px;
+  margin-bottom: 12px;
 }
 
-.sub-header {
+.sub-footer {
   padding: 10px;
   padding-bottom: 10px;
 }
 
-.sub-header a {
+.sub-footer a {
   font-size: 12px;
   text-decoration: none;
   color: white;
@@ -608,7 +665,7 @@ figure {
   align-items: center;
 }
 
-/* ---------- FOR SCREENS 768px and above ---------- */
+/* ---------- FOR SCREENS 760px and above ---------- */
 @media (min-width: 760px) {
 
   /* ------- CUSTOM SCROLLBAR ------ */
@@ -637,8 +694,17 @@ figure {
     border: 3px solid var(--scrollbarBG);
   }
 
+  /* ------ Other Styling ---- */
   p {
     font-size: large;
+  }
+
+  .left-side-element h2 {
+    font-size: medium;
+  }
+
+  .header #logo_1 {
+    width: 35%;
   }
 
   .more-info {
@@ -651,13 +717,33 @@ figure {
     margin: 20px;
   }
 
-  #home {
+  .artist-image {
+    max-width: 80%;
+    max-height: 80%;
+  }
+
+  .footer-nav .sub-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footer-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .footer-nav .sub-footer .footer-container a {
+    margin: 20px;
+    letter-spacing: 3px;
   }
 }
 
 @media (min-width: 1020px) {
   body {
     width: 100vw;
+    max-width: 100vw;
   }
 
   .header {
@@ -666,6 +752,18 @@ figure {
     align-items: center;
     background-image: none;
     width: 100vw;
+    max-width: 100%;
+    min-height: 12vh;
+  }
+
+  .header #logo_1 {
+    display: none;
+  }
+
+  .header #logo_2 {
+    display: block;
+    width: 40%;
+    margin-left: 5%;
   }
 
   .header .menu {
@@ -678,7 +776,6 @@ figure {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-left: 1%;
   }
 
   .no-border {
@@ -703,13 +800,19 @@ figure {
   .header li a:hover,
   .header .menu-btn:hover {
     background-color: black;
-    background: linear-gradient(270deg, #dd0808, #991aa2);
+    background: linear-gradient(270deg, var(--red), var(--purple));
   }
 
-  /* ------- Background Canvas -------- */
+  /* ------- Left side styling ----- */
+  .left-side-element {
+    max-width: 50vw;
+    margin-top: 35vh;
+  }
 
+  /* ------- Page styling -------- */
   .page {
     width: 50vw;
+    margin-bottom: 30vh;
   }
 
   #pages-wrapper {
@@ -743,6 +846,29 @@ figure {
   .more-info .wp-block-embed-instagram {
     max-width: 100%;
   }
+
+  /* ------- Footer ------ */
+  #footer {
+    width: 50vw;
+    right: 0;
+    padding-top: 50vh;
+  }
+
+  .sponsor-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .footer-container {
+    min-width: 40vw;
+  }
+
+  .footer-container a {
+    font-size: 10px;
+    margin: 10px !important;
+  }
 }
 
 @media (min-width: 1700px) {
@@ -753,6 +879,6 @@ figure {
   }
 
   .more-info .displayBlock {
-    max-height: 110%;
+    max-height: 50vh;
   }
 }
